--- a/maxdiv/libmaxdiv/CMakeLists.txt
+++ b/maxdiv/libmaxdiv/CMakeLists.txt
@@ -10,6 +10,14 @@ set(API_VERSION 1)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+#### Libraries ####
+
+# Eigen library
+FIND_PACKAGE( PkgConfig )
+IF(PKG_CONFIG_FOUND)
+    PKG_CHECK_MODULES( EIGEN3 REQUIRED eigen3 )
+    INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIRS})
+ENDIF(PKG_CONFIG_FOUND)
 
 #### Build options ####
 OPTION(MAXDIV_FLOAT "Use single precision." OFF)
