--- a/maxdiv/libmaxdiv/CMakeLists.txt
+++ b/maxdiv/libmaxdiv/CMakeLists.txt
@@ -1,4 +1,5 @@
-CMAKE_MINIMUM_REQUIRED(VERSION 3.1.0)
+#CMAKE_MINIMUM_REQUIRED(VERSION 3.1.0)
+CMAKE_MINIMUM_REQUIRED(VERSION 2.8.0)
 
 PROJECT(maxdiv)
 
@@ -9,6 +10,8 @@ set(API_VERSION 1)
 #### Set C++ standard ####
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 #### Libraries ####
 
