Eigen not longer required by CMake to allow for setting the include path manually

--- a/maxdiv/libmaxdiv/CMakeLists.txt
+++ b/maxdiv/libmaxdiv/CMakeLists.txt
@@ -15,7 +15,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 # Eigen library
 FIND_PACKAGE( PkgConfig )
 IF(PKG_CONFIG_FOUND)
-    PKG_CHECK_MODULES( EIGEN3 REQUIRED eigen3 )
+    PKG_CHECK_MODULES( EIGEN3 eigen3 )
     INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIRS})
 ENDIF(PKG_CONFIG_FOUND)
 
